# sovereign-war-dogs

./: .env.example  .gitignore  PRIVACY.md  README.md  launch_tauri_window.bat  requirements_streamlit.txt  run_all.bat  run_all.sh  start_sovereign.bat  streamlit_app.py
.github/workflows/: ci.yml  pages.yml  release.yml
analytics/: Code.gs
contracts/: poller.py  requirements.txt  resolver.py
docs/: index.html
docs/app/: index.html
docs/app/assets/: index-CL2mcW2M.js  index-D2F9Xvhy.js  index-hPo6drmE.js
infra/: docker-compose.full.yml  docker-compose.yml
signal/: alpaca_exec.py  diagnose.py  engine.py  news_poller.py  nlp.py  requirements.txt  rss_poller.py  ticker_map.py
sovereign/: Cargo.toml  Dockerfile
sovereign/src/: finnhub.rs  main.rs  redis_bus.rs  types.rs  ws_server.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  Setup.jsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
