[package]
name = "sovereign-core"
version = "0.1.0"
edition = "2021"
description = "Sovereign — sub-millisecond geopolitical alpha event router"

[dependencies]
tokio          = { version = "1.35",  features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util   = "0.3"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
redis          = { version = "0.24", features = ["tokio-comp", "streams"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono         = { version = "0.4", features = ["serde"] }
uuid           = { version = "1.6", features = ["v4"] }
anyhow         = "1.0"
reqwest        = { version = "0.11", features = ["json", "native-tls"] }
axum           = { version = "0.7", features = ["ws"] }
tower-http     = { version = "0.5", features = ["cors"] }
dashmap        = "5.5"
once_cell      = "1.19"
dotenvy        = "0.15"

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
panic          = "abort"
