[package]
name = "sovereign-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "sovereign_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri    = { version = "2", features = ["devtools"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
